# SQLid

./: .gitignore  CMakeLists.txt  README.md  asymptotics.md  counter.py  documentary.md  test_info.db
examples/ImGuiExample/: ImGuiExample.sln  ImGuiExample.vcxproj  ImGuiExample.vcxproj.filters  SQLid_API.h  imgui.ini  main.cpp
include/: SQLid_API.h
src/: SQLid.cpp  SQLid.h  supported_variants.h
src/clients/: Base.h  Client.h  Operator.h  SyncServer.h
src/data_base/: CommandsExecutor.h  DataBase.h  Executor.h
src/exceptions/: Exceptions.h
src/files/: DataBase.h  InfoLoader.h  MemoryMap.h  MemoryMapLinux.h  MemoryMapWindows.h  Optimizer.h  Tabble.h
src/parser/: Commands.h  CommandsParser.h  Conditions.cpp  Conditions.h  Help.h  Query.h  RequestParser.h
src/result/: Result.h
src/system/: system.h
